Configuracao do rabbitmq do projeto lista-de-jogos